[package]
name = "rusty-mine-sweeper"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Moes <moes@pdx.edu>", "Nathan Moes <nathanmoes7@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prompted = "0.2.7"
rand = "0.8.5"